--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/.idea/**/tasks.xml
 **/.idea/shelf/*
 **/.idea/dictionaries
-
+.idea
 # Sensitive or high-churn files
 **/.idea/**/dataSources/
 **/.idea/**/dataSources.ids
@@ -16,7 +16,7 @@
 **/.idea/**/*.iml
 **/.idea/**/contentModel.xml
 **/.idea/**/modules.xml
-
+    
 *.suo
 *.user
 .vs/
